add defaults JVM_OPTS